--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </div>
 
       <div id="buttons">
-        <a href="https://chrome.google.com/webstore/detail/tagkick/hnbgophbdhcjoihcpmafgemiikkadkgm" class="btn btn-success btn-large">Get it now</a>
+        <a href="https://chrome.google.com/webstore/detail/tagkick/hnbgophbdhcjoihcpmafgemiikkadkgm" class="btn btn-success btn-large">Get it now for Google Chrome</a>
         <a href="https://github.com/ankane/tagkick"><span>View on GitHub</span></a>
         <a href="https://github.com/ankane/tagkick/issues">Report issues</a>
         <a href="https://github.com/ankane/tagkick/issues">Comment on HackerNews</a>
