Fixed HN comment link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="https://chrome.google.com/webstore/detail/tagkick/hnbgophbdhcjoihcpmafgemiikkadkgm" class="btn btn-success btn-large">Get it now for Google Chrome</a>
         <a href="https://github.com/ankane/tagkick"><span>View on GitHub</span></a>
         <a href="https://github.com/ankane/tagkick/issues">Report issues</a>
-        <a href="https://github.com/ankane/tagkick/issues">Comment on HackerNews</a>
+        <a href="http://news.ycombinator.com/item?id=4773869">Comment on HackerNews</a>
       </div>
 
       <iframe style="margin-bottom: 20px;" width="853" height="480" src="https://www.youtube-nocookie.com/embed/e4XYSgBwtEw?modestbranding=1&amp;showinfo=0&amp;vq=hd720" frameborder="0" allowfullscreen></iframe>
