Fixed video params

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="http://news.ycombinator.com/item?id=4773869">Comment on HackerNews</a>
       </div>
 
-      <iframe style="margin-bottom: 20px;" width="853" height="480" src="https://www.youtube-nocookie.com/embed/e4XYSgBwtEw?modestbranding=1&amp;showinfo=0&amp;vq=hd720" frameborder="0" allowfullscreen></iframe>
+      <iframe style="margin-bottom: 20px;" width="853" height="480" src="https://www.youtube-nocookie.com/embed/e4XYSgBwtEw?modestbranding=1&amp;showinfo=0&amp;rel=0" frameborder="0" allowfullscreen></iframe>
 
       <p class="muted">Made in San Francisco<p>
     </div>
